<resources>
    <string name="app_name">GB Calculator</string>
    <string name="label_1">1</string>
    <string name="label_2">2</string>
    <string name="label_3">3</string>
    <string name="label_4">4</string>
    <string name="label_5">5</string>
    <string name="label_6">6</string>
    <string name="label_7">7</string>
    <string name="label_8">8</string>
    <string name="label_9">9</string>
    <string name="label_0">0</string>
    <string name="label_point">.</string>
    <string name="label_plus">+</string>
    <string name="label_minus">-</string>
    <string name="label_division">/</string>
    <string name="label_multiply">*</string>
    <string name="label_backspace">C</string>
    <string name="label_equally">=</string>
    <string name="switchTheme">Тёмная/Светлая тема</string>
</resources>