<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <com.google.android.material.button.MaterialButton
            android:id="@+id/button_plus"
            style="@style/keyboardOperation"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_chainStyle="packed"
            android:text="@string/label_plus"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_minus"
            app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/button_minus"
            style="@style/keyboardOperation"
            app:layout_constraintHorizontal_bias="0"
            android:text="@string/label_minus"
            app:layout_constraintTop_toBottomOf="@id/button_plus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_multiply"
            app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/button_multiply"
            style="@style/keyboardOperation"
            app:layout_constraintHorizontal_bias="0"
            android:text="@string/label_multiply"
            app:layout_constraintTop_toBottomOf="@id/button_minus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_division"
            app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/button_division"
            style="@style/keyboardOperation"
            app:layout_constraintHorizontal_bias="0"
            android:text="@string/label_division"
            app:layout_constraintTop_toBottomOf="@id/button_multiply"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/button_backspace"
            style="@style/keyboardOperationBig"
            android:text="@string/label_backspace"
            app:layout_constraintBottom_toBottomOf="@id/button_minus"
            app:layout_constraintStart_toEndOf="@id/button_minus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/button_plus"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/button_equally"
            style="@style/keyboardOperationBig"
            android:text="@string/label_equally"
            app:layout_constraintBottom_toBottomOf="@id/button_division"
            app:layout_constraintStart_toEndOf="@id/button_multiply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/button_multiply"/>


</androidx.constraintlayout.widget.ConstraintLayout>